# sm4_c_rust

./: .gitignore  README.md
sm4_c/: CMakeLists.txt
sm4_c/include/: sm4.h
sm4_c/src/: sm4.c
sm4_c/tests/: CMakeLists.txt  test.c
sm4_rs/: Cargo.toml
sm4_rs/src/: main.rs
sm4_rs/src/sm4/: mod.rs  sm4_utils.rs
sm4_rs/src/sm4/data/: plaintext.txt
sm4_rs/temp/: casts.rs  clear.rs  linear_circuit.rs  mod.rs
